# nt-box

./: CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  BOX_GUIDE.md  BUILD.md  COMMANDS.md  CROSS_PLATFORM.md  IMPLEMENTATION_MINGW64.md  MINGW64_SUPPORT.md  MODULE_DEVELOPMENT.md  README.md
include/: builder.h  installer.h  platform.h  registry.h
src/: builder.cpp  installer.cpp  main.cpp  native_shim.cpp  platform.cpp  registry.cpp
